force-app/main/default/objects/Customer_Care_Data__c/Customer_Care_Data__c.object-meta.xml
<CustomObject>
    <description>AWS Data from the Alix Partners Data Model will be imported on a monthly basis, by customer account.</description>
    <label>Customer Care Data</label>
    <nameField>
        <label>Customer Care Data Num</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Care Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>