force-app/main/default/objects/Customer_Care_Data__c/fields/Customer_IMGA_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_IMGA_Name__c</fullName>
    <label>Customer IMGA Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>