force-app/main/default/objects/Customer_Care_Data__c/fields/Customer_IMSIGHT_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_IMSIGHT_Number__c</fullName>
    <label>Customer IMSIGHT Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>