force-app/main/default/objects/Customer_Care_Data__c/fields/Request_Type_Category_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Request_Type_Category_Code_1__c</fullName>
    <label>Request Type Category Code 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>