force-app/main/default/objects/Customer_Care_Data__c/fields/Request_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Request_Type_Code__c</fullName>
    <label>Request Type Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>