force-app/main/default/objects/Customer_Care_Data__c/recordTypes/BW_AWS_Record.recordType-meta.xml
<RecordType>
    <fullName>BW_AWS_Record</fullName>
    <active>true</active>
    <label>BW - AWS Record</label>
</RecordType>